# Generated by Django 4.1.7 on 2023-04-11 10:08

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion

import core


class Migration(migrations.Migration):
    dependencies = [
        ("core", "0006_remove_message_picture"),
    ]

    operations = [
        migrations.CreateModel(
            name="UserChat",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("role", models.CharField(
                    choices=[("OWNER", "OWNER"), ("ADMIN", "ADMIN"), ("MEMBER", "MEMBER")],
                    default=core.utils.enums.ChatRoleEnum["MEMBER"],
                    max_length=100,
                    verbose_name="Роль пользователя в чате", )),
                (
                    "chat",
                    models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="core.chat", verbose_name="Чат"),
                ),
                (
                    "user",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="Пользователь",
                    ),
                ),
            ],
        ),
        migrations.RemoveField(
            model_name="chat",
            name="users",
        ),
        migrations.AddField(
            model_name="chat",
            name="users",
            field=models.ManyToManyField(
                related_name="chats",
                through="core.UserChat",
                to=settings.AUTH_USER_MODEL,
                verbose_name="Участники чата",
            ),
        ),
    ]
