@startuml
entity Chat {
* pk
__
*created_at: datetime <<generated>>
updated_at: datetime <<generated>>
*is_dialog: bool
}

entity AttachmentTypeEnum {
CREATE: "CREATE"
DELETE: "DELETE"
UPDATE: "UPDATE"
}

entity Attachment {
* pk
__
author: number <<FK>>
*created_at: datetime <<generated>>
updated_at: datetime <<generated>>
chat_id: number <<FK>>
reply_to_message: number <<FK>>
reply_to_attachment: number <<FK>>
forward_by: number <<FK>>
file: filefield
type: AttachmentTypeEnum
}

entity Message {
* pk
__
*author_id: number <<FK>>
*chat_id: number <<FK>>
reply_to_message: number <<FK>>
reply_to_attachment: number <<FK>>
text: text
forward_by: number <<FK>>
*sent_at: datetime <<generated>>
}

entity User {
* pk
__
*email: text
*password: text
*registered_at: datetime <<generated>>
name: text
surname: text
updated_at: datetime
profile_picture: imagefield
}

entity ChatRoleEnum {
OWNER: "OWNER"
ADMIN: "ADMIN"
MEMBER: "MEMBER"
}

entity UserChat {
* pk
__
* chat_id: Number <<FK>>
* user_id: Number <<FK>>
* role: ChatRoleEnum <<default: MEMBER>>
}


UserChat }|-- User
UserChat }|-- Chat


Message }|-- User
Message }|-- Chat

Attachment }|-- Chat

Message ||--|| Message
Message ||--|| Attachment

Attachment ||--|| Message
Attachment ||--|| Attachment

Attachment }|-- User
@enduml